--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "solana-tracker",
-  "version": "1.0.1",  // ← Changez la version (ex: 1.0.0 → 1.0.1)
+  "version": "1.0.0",
   "dependencies": {
     "@solana/web3.js": "^1.73.0",
-    "axios": "^1.6.7"  // ← Bien vérifier cette ligne
+    "axios": "^1.6.7"
   },
   "scripts": {
     "start": "node tracker.js",
-    "install-deps": "npm install"  // ← Nouveau script
+    "install-deps": "npm install"
   }
 }
