--- a/package.json
+++ b/package.json
@@ -1,3 +1,12 @@
-"scripts": {
-  "start": "node tracker.js"
+{
+  "name": "solana-tracker",
+  "version": "1.0.0",
+  "dependencies": {
+    "@solana/web3.js": "^1.73.0",
+    "axios": "^1.6.7"
+  },
+  "scripts": {
+    "start": "node tracker.js",
+    "install-deps": "npm install"
+  }
 }
