--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "start": "node tracker.js"
   },
   "dependencies": {
+     "axios-rate-limit": "^3.0.5"
     "@solana/web3.js": "^1.73.0",
-    "axios": "^1.6.7"
+      "axios": "^1.6.7"
   }
 }
