--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
+  "name": "solana-wallet-tracker",
+  "version": "1.0.0",
+  "description": "A bot to track Solana wallet transactions and send Telegram alerts",
+  "main": "tracker.js",
   "scripts": {
-    "start": "node tracker.js"
+    "start": "node tracker.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-     "axios-rate-limit": "^3.0.5"
     "@solana/web3.js": "^1.73.0",
-      "axios": "^1.6.7"
+    "axios": "^1.6.7",
+    "axios-rate-limit": "^3.0.5"
+  },
+  "engines": {
+    "node": ">=18.x"
   }
 }
