--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   },
   "dependencies": {
     "@solana/web3.js": "^1.73.0",
-    "axios": "^1.6.7",
-    "axios-rate-limit": "3.0.2"
+    "axios": "^1.6.7"
   },
   "engines": {
     "node": ">=18.x"
