--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   },
   "dependencies": {
     "@solana/web3.js": "^1.100.0",
-    "axios": "^1.6.7",
-    "node-telegram-bot-api": "^0.61.0"
+    "axios": "^1.6.7"
   },
   "engines": {
     "node": ">=18.x"
