--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "solana-tracker",
   "version": "2.0.0",
+  "description": "Solana wallet transaction tracker",
   "main": "tracker.js",
   "scripts": {
-    "start": "node tracker.js"
+    "start": "node tracker.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@solana/web3.js": "^1.100.0",
-    "axios": "^1.6.7"
+    "@solana/web3.js": "^1.84.0",
+    "axios": "^1.4.0",
+    "dotenv": "^16.3.1"
   },
+  "license": "MIT",
   "engines": {
     "node": ">=18.x"
   }
