--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@solana/web3.js": "^1.84.0",
-    "axios": "^1.4.0",
-    "dotenv": "^16.3.1"
-  },
+  "@solana/web3.js": "^1.84.0",
+  "axios": "^1.4.0",
+  "dotenv": "^16.3.1",
+  "node-cache": "^5.1.2"
+}
   "license": "MIT",
   "engines": {
     "node": ">=18.x"
