--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "solana-tracker",
-  "version": "2.0.0",
-  "description": "Solana wallet transaction tracker",
+  "version": "2.1.0",
+  "description": "Solana wallet transaction tracker with improved rate limiting",
   "main": "tracker.js",
   "scripts": {
     "start": "node tracker.js",
